# pape-python-package

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
pape/: utilities.py
src/pape/: __init__.py  utilities.py
tests/pape/: test_utilities.py
